--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -542,19 +542,23 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 
 .set_search{font-family:'Montserrat', sans-serif;}
-.set_banner{float:left;width:33%;margin-right:2%;border:1px solid #aaa;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);}
-.set_banner .banner_box{float:left;width:48%;margin:1%;}
-.set_banner .banner_box img{width:100%;border-radius:10px;border:1px solid #ccc;}
+.set_banner{float:left;width:33%;margin-right:2%;border:1px solid #aaa;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:15px;height:650px;overflow:scroll;}
+.set_banner ul{margin-left:15px;}
+.set_banner ul li{margin:5px 0;list-style:disc;}
+.set_banner ul li a{color:#08f;}
+/*.set_banner .banner_box{float:left;width:48%;margin:1%;}
+.set_banner .banner_box img{width:100%;border-radius:10px;border:1px solid #ccc;}*/
 .set_search_box{float:left;width:63%;margin-left:2%;background:white;margin:0 auto 50px auto;border-radius:5px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:34px;border:1px solid #aaa;}
 .set_search_box h2{margin:0 0 20px;}
 .disable{display:none;}
 /*.post-type, */.prime-type, .coupon-type, .shipping-type, .fast-type{display:table;width:100%;/*table-layout:fixed;*/margin-bottom:20px;}
 .post-type{}
 /*.on_off{width:20%;}*/
-.op_wrap{float:left;width:48%;margin:1%;}
+.op_wrap{float:left;width:31%;margin:1%;}
 .post-type input, .prime-type input, .coupon-type input, .shipping-type input, .fast-type input{display:none;}
 .post-type input:checked + label, .prime-type input:checked + label, .coupon-type input:checked + label, .shipping-type input:checked + label, .fast-type input:checked + label{background:#08f;color:#fff;}
-/*.post-type label, */.prime-type label, .coupon-type label, .shipping-type label, .fast-type label{display:table-cell;padding:10px;text-align:center;border:1px solid #e3e3e3;border-left:none;cursor:pointer;}
+.prime-type label, .coupon-type label, .shipping-type label, .fast-type label{display:table-cell;padding:10px;text-align:center;border:1px solid #e3e3e3;border-left:none;cursor:pointer;}
+.post-type label{display:inline-block;margin-bottom:10px;padding:10px;text-align:center;border:1px solid #ccc;cursor:pointer;font-size:11px;}
 .swich_on{border-top-right-radius:10px;border-bottom-right-radius:10px;}
 .swich_off{border-top-left-radius:10px;border-bottom-left-radius:10px;}
 /*.post-type label{float:left;width:20%;padding:10px;border:1px solid #ccc;}*/
@@ -570,10 +574,14 @@ header .gnb_m,header .gnb_open2{display:none;}
 .set_search_box button{width:40%;background:#08f;border:none;padding:15px 30px;color:#fff;font-weight:500;font-size:20px;border-radius:10px;}
 .search_dropdown{display:inline-block;}
 
-.reset_set{}
-.reset_set a{border:1px solid #ccc;padding:10px 50px;color:#616161;border-radius:10px;margin-left:1%;}
+.set_search_box button{border:none;padding:10px 20px;}
+.set_search_box button.accordion{margin-bottom:10px;width:30%;margin-bottom:10px;background:#fff;color:#000;font-size:15px;border-radius:10px;border:1px solid #ccc;}
+.set_search_box button.accordion span{font-size:15px;font-weight:bold;}
+.set_search_box .panel{padding:0 18px;display:none;background-color:#fff;overflow:hidden;}
+.set_search_box .feild_wrap, .set_search_box .option_wrap{margin-bottom:30px;}
 
-
+/*.reset_set{float:left;vertical-align:middle;}*/
+a.set_reset{border:1px solid #ccc;padding:10px 50px;color:#616161;border-radius:10px;margin-left:1%;float:left;}
 
 @media screen and (max-width:640px){
   .op_wrap{float:none;width:100%;margin:0;}
@@ -583,6 +591,8 @@ header .gnb_m,header .gnb_open2{display:none;}
   .field input, .field select{width:100%;float:none;}
   .field .custom-time{padding:10px 0 0 0;}
   .field .custom-time select, .field .custom-time input{width:48%;margin:0 1% 0 1%;}
+  .set_search_box button.accordion{width:100%;}
+  .set_search_box .panel{padding:0;}
   .set_search_box h2{font-size:16px;}
   .set_banner{display:none;float:none;width:100%;margin:0 0 20px 0 ;}
 }
@@ -590,65 +600,19 @@ header .gnb_m,header .gnb_open2{display:none;}
 }
 
 
-/*.post-type {
-  display: block;
-  margin-bottom: 20px;
-}*/
-/*.post-type input {
-  display: none;
-}*/
-/*.post-type input:checked + label {
-  background: #bad455;
-  color: white;
-}*/
-.post-type label{display:inline-block;margin-bottom:10px;padding:10px;text-align:center;border:1px solid #ccc;cursor:pointer;font-size:11px;}
-/*.post-type label:first-of-type {
-  border-left: 1px solid #e3e3e3;
-}*/
 
 
-/*.field {
-  padding: 15px 0;
-  overflow: hidden;
-}*/
-/*.field span.label {
-  width: 20%;
-  float: left;
-  text-align: right;
-  padding: 5px 10px;
-}*/
-.field input,
-.field select {
+
+/*.field input,
+.field select{
   width: 60%;
   float: left;
   padding:10px;
   border: 1px solid #e3e3e3;
   -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
-  border-radius:10px;
-}
-/*.field .custom-time {
-  padding-left: 40%;
-  padding-top: 10px;
-  clear: both;
-}
-.field .custom-time select,
-.field .custom-time input {
-  width: 45%;
-}*/
-/*.field .custom-time select {
-  margin-right: 10%;
-}*/
-/*.text-center {
-  padding-top: 30px;
-  text-align: right;
-}*/
-button{background:#bad455;border:none;padding:10px 20px;}
-button.accordion{margin-bottom:10px;width:30%;margin-bottom:10px;background:#616161;color:#fff;font-size:15px;border-radius:10px;}
-button.accordion span{font-size:15px;font-weight:bold;}
-.set_search_box .panel{padding:0 18px;display:none;background-color:#fff;overflow:hidden;}
-.set_search_box .feild_wrap, .set_search_box .option_wrap{margin-bottom:15px;}
+  -moz-appearance: none;appearance:none;border-radius:10px;}*/
+
+
 
 
 
