--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -14,8 +14,7 @@
 
       <% if can? :update, @promocode %>
         <div class="set_search clearfix">
-          
-          <%= render 'deals/isnot' %>
+          <%= render 'deals/set_search' %>
         </div>
       <% end %>
       
