--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -143,7 +143,7 @@
         </div>
 
         <div class="text_copied text_copied_pc">
-        <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= promocode.p_promocode %></p></div></div></div>
+        <div class="container_copy"><div class="wrap"><div class="box"><p data-copy-text=""><%= promocode.p_promocode %></p></div></div></div>
         </div>
 
        <% if promocode.p_end_date.present? %>
@@ -175,10 +175,10 @@
      </div>
     </div> 
     <div class="text_copied text_copied_m">
-      <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= promocode.p_promocode %></p></div></div></div>
+      <div class="container_copy"><div class="wrap"><div class="box"><p data-copy-text=""><%= promocode.p_promocode %></p></div></div></div>
     </div>
     <div class="deal_btn promo_btn">
-      <a target="_blank" href="<%= promocode.p_link %>">Use Code at AMAZON</a>
+      <a target="_blank" href="<%= promocode.p_link %>">Use code on AMAZON</a>
     </div>
   </div>
 <% end %>
